# AoC-2022

./: Cargo.toml
.github/workflows/: test.yml
benches/: all_days.rs
src/day_1/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_2/: mod.rs
src/day_3/: mod.rs
src/day_4/: mod.rs
src/day_5/: mod.rs
src/day_6/: mod.rs
src/day_7/: mod.rs
src/day_8/: mod.rs
src/day_9/: mod.rs
