[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
nom = "7.1.1"

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
overflow-checks = true

[lib]
bench = false

[[bench]]
name = "all_days"
harness = false
